# FileTransfer

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.trae/rules/: code-rule.md
docs/: AI入口.md  项目上下文.md
scripts/: build.py  firewall_manager.py  package_windows.py
src/: CMakeLists.txt  lib.rs  main.rs
src/app/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  constants.rs  mod.rs  utils.rs
src/common/json/: CMakeLists.txt  jsonutil.cpp  jsonutil.h
src/common/logger/: CMakeLists.txt  logger.h
src/common/messagebus/: messagebus.cpp  messagebus.h  messagetypes.h
src/common/theme/: CMakeLists.txt  thememanager.cpp  thememanager.h
src/common/utils/: CMakeLists.txt  firewallmanager.cpp  firewallmanager.h  versionmanager.cpp  versionmanager.h
src/core/: CMakeLists.txt
src/core/device/: CMakeLists.txt  devicemanager.cpp  devicemanager.h
src/core/filesystem/: CMakeLists.txt  filesystemmodel.cpp  filesystemmodel.h
src/core/network/: CMakeLists.txt  devicediscoverer.cpp  devicediscoverer.h  filetransferservice.cpp  filetransferservice.h  networkprotocol.h
src/device/: device_manager.rs  mod.rs
src/filesystem/: filesystem_model.rs  mod.rs
src/gui/: app.rs  mod.rs  style.rs
src/logger/: logger.rs  logger_impl.rs  mod.rs
src/messagebus/: messagebus.rs  messagebus_impl.rs  mod.rs
src/network/: device_discoverer.rs  file_transfer_service.rs  mod.rs  protocol.rs
src/ui/: CMakeLists.txt
src/ui/mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/ui/widgets/: CMakeLists.txt  devicetreeview.cpp  devicetreeview.h  filebrowserpanel.cpp  filebrowserpanel.h  transferprogresspanel.cpp  transferprogresspanel.h
