[package]
name = "file-transfer"
version = "1.0.0"
edition = "2021"
authors = ["FileTransfer Team"]
description = "跨平台文件传输系统 - Rust版本"
license = "MIT"

[dependencies]
# 网络和异步
tokio = { version = "1.35", features = ["full"] }
async-std = "1.12"

# 日志
log = "0.4"
env_logger = "0.11"
colored = "2.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 文件系统
walkdir = "2.4"

# 时间
chrono = "0.4"

# UUID生成
uuid = { version = "1.6", features = ["v4", "serde"] }

# 随机数
rand = "0.8"

# 系统信息
os_info = "3"
hostname = "0.4"
whoami = "1.5"

# 跨平台
cfg-if = "1.0"

# Windows API (用于设置控制台编码)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processenv", "winbase", "consoleapi", "wincon"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 原子引用计数
arc-swap = "1.6"

# 单例模式
once_cell = "1.19"

# 命令行界面(可选)
clap = { version = "4.4", features = ["derive"], optional = true }

# GUI界面
iced = { version = "0.12", features = ["tokio"], optional = true }

[features]
default = ["cli"]
cli = ["clap"]
gui = ["iced"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true